syntax = "proto3";

package proto;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

// The Init service definition.
service Ntpd {
  rpc Time(google.protobuf.Empty) returns (TimeReply) {}
  rpc TimeCheck(TimeRequest) returns (TimeReply) {}
}

// The response message containing the ntp server
message TimeRequest {
	string server = 1;
}

// The response message containing the ntp server, time, and offset
message TimeReply {
  string server = 1;
  google.protobuf.Timestamp localtime = 2;
  google.protobuf.Timestamp remotetime = 3;
}
